# proto-dyno

./: .gitignore  README.md  pyproject.toml
arduino/dyno_joulemeter/: README.md  dyno_joulemeter.ino
dyno_speedometer_firmware/: speedometer_new_sensor_code.ino
proto_dyno/: __init__.py  app.py  cli.py  controller.py  dl24.py  safety.py
tests/: test_dl24.py  test_safety.py
