[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-dyno"
version = "0.1.0"
description = "Safe Tkinter load slider for ATORCH DL24-style electronic loads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyserial>=3.5"]

[project.scripts]
proto-dyno = "proto_dyno.app:main"
proto-dyno-cli = "proto_dyno.cli:main"

[tool.setuptools.packages.find]
where = ["."]
